--- a/content/resources/res-6-005s08-th.md
+++ b/content/resources/res-6-005s08-th.md
@@ -1,7 +1,7 @@
 ---
 content_type: resource
 description: ''
-file: /media/https%3A/open-learning-course-data-rc.s3.amazonaws.com/res-6-005-understanding-lasers-and-fiberoptics-spring-2008/998db749a923976e791f9ff785c60350_res-6-005s08-th.jpg
+file: /media/courses/res-6-005-understanding-lasers-and-fiberoptics-spring-2008/998db749a923976e791f9ff785c60350_res-6-005s08-th.jpg
 file_type: image/jpeg
 image_metadata:
   caption: A collection of fiber optic fibers lit by red and yellow light. (Image
@@ -9,6 +9,8 @@ image_metadata:
     Used with permission.)
   credit: ''
   image-alt: Photograph of the ends of fiber optic fibers lit by a red LED.
+learning_resource_types: []
+ocw_type: OCWImage
 resourcetype: Image
 title: res-6-005s08-th.jpg
 uid: 998db749-a923-976e-791f-9ff785c60350
