--- a/content/resources/res-6-005s08.md
+++ b/content/resources/res-6-005s08.md
@@ -1,7 +1,7 @@
 ---
 content_type: resource
 description: ''
-file: /media/https%3A/open-learning-course-data-rc.s3.amazonaws.com/res-6-005-understanding-lasers-and-fiberoptics-spring-2008/441c35fe31ff0e53898f24c26bcfca44_res-6-005s08.jpg
+file: /media/courses/res-6-005-understanding-lasers-and-fiberoptics-spring-2008/441c35fe31ff0e53898f24c26bcfca44_res-6-005s08.jpg
 file_type: image/jpeg
 image_metadata:
   caption: A collection of fiber optic fibers lit by red and yellow light. (Image
@@ -9,6 +9,8 @@ image_metadata:
     Used with permission.)
   credit: ''
   image-alt: Photograph of the ends of fiber optic fibers lit by a red LED.
+learning_resource_types: []
+ocw_type: OCWImage
 resourcetype: Image
 title: res-6-005s08.jpg
 uid: 441c35fe-31ff-0e53-898f-24c26bcfca44
