--- a/content/resources/res-6-005s08-th.md
+++ b/content/resources/res-6-005s08-th.md
@@ -1,7 +1,7 @@
 ---
 content_type: resource
 description: ''
-file: /media/courses/res-6-005-understanding-lasers-and-fiberoptics-spring-2008/998db749a923976e791f9ff785c60350_res-6-005s08-th.jpg
+file: /courses/res-6-005-understanding-lasers-and-fiberoptics-spring-2008/998db749a923976e791f9ff785c60350_res-6-005s08-th.jpg
 file_type: image/jpeg
 image_metadata:
   caption: A collection of fiber optic fibers lit by red and yellow light. (Image
@@ -10,6 +10,7 @@ image_metadata:
   credit: ''
   image-alt: Photograph of the ends of fiber optic fibers lit by a red LED.
 learning_resource_types: []
+license: https://creativecommons.org/licenses/by-nc-sa/4.0/
 ocw_type: OCWImage
 resourcetype: Image
 title: res-6-005s08-th.jpg
