Sync all content

--- a/content/resources/res-6-005s08-th.md
+++ b/content/resources/res-6-005s08-th.md
@@ -2,6 +2,7 @@
 content_type: resource
 description: ''
 file: /courses/res-6-005-understanding-lasers-and-fiberoptics-spring-2008/998db749a923976e791f9ff785c60350_res-6-005s08-th.jpg
+file_size: 2982
 file_type: image/jpeg
 image_metadata:
   caption: A collection of fiber optic fibers lit by red and yellow light. (Image
