--- a/content/resources/res-6-005s08.md
+++ b/content/resources/res-6-005s08.md
@@ -2,6 +2,7 @@
 content_type: resource
 description: ''
 file: /courses/res-6-005-understanding-lasers-and-fiberoptics-spring-2008/441c35fe31ff0e53898f24c26bcfca44_res-6-005s08.jpg
+file_size: 61098
 file_type: image/jpeg
 image_metadata:
   caption: A collection of fiber optic fibers lit by red and yellow light. (Image
