Sync all content

--- a/content/resources/res-6-005s08-th.md
+++ b/content/resources/res-6-005s08-th.md
@@ -6,8 +6,8 @@ file_size: 2982
 file_type: image/jpeg
 image_metadata:
   caption: A collection of fiber optic fibers lit by red and yellow light. (Image
-    by [Vermin Inc](http://www.flickr.com/photos/vermininc/2645441963/) on Flickr.
-    Used with permission.)
+    by {{% resource_link "30c9e4e0-7b80-4e20-98d6-47aca7a89b1f" "Vermin Inc" %}} on
+    Flickr. Used with permission.)
   credit: ''
   image-alt: Photograph of the ends of fiber optic fibers lit by a red LED.
 learning_resource_types: []
